Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div id="hero-carousel" class="carousel-container flex gap-4 overflow-x-auto snap-x snap-mandatory scrollbar-hide pb-4">
                         
                         <!-- Slide 1: Naviera -->
-                        <div class="snap-center shrink-0 w-full md:w-[85%] lg:w-[70%] relative group cursor-pointer overflow-hidden rounded-3xl shadow-xl shadow-blue-200/50" onclick="window.location.href='./sipu/3d/adugames/navi3d.html'">
+                        <div class="snap-center shrink-0 w-full md:w-[85%] lg:w-[70%] relative group cursor-pointer overflow-hidden rounded-3xl shadow-xl shadow-blue-200/50" onclick="window.location.href='./sipu/adugames/navi3d.html'">
                             <div class="absolute inset-0 bg-gradient-to-r from-blue-600 to-indigo-800"></div>
                             <div class="absolute right-0 bottom-0 opacity-20 transform translate-x-10 translate-y-10">
                                 <i data-lucide="ship" class="w-48 h-48 text-white"></i>
@@ -283,7 +283,7 @@
                             </div>
                         </div>
                         <!-- Slide 2: Inspector -->
-                        <div class="snap-center shrink-0 w-full md:w-[85%] lg:w-[70%] relative group cursor-pointer overflow-hidden rounded-3xl shadow-xl shadow-red-200/50" onclick="window.location.href='./sipu/3d/adugames/ins3d.html'">
+                        <div class="snap-center shrink-0 w-full md:w-[85%] lg:w-[70%] relative group cursor-pointer overflow-hidden rounded-3xl shadow-xl shadow-red-200/50" onclick="window.location.href='./sipu/adugames/ins3d.html'">
                             <div class="absolute inset-0 bg-gradient-to-r from-rose-500 to-red-700"></div>
                             <div class="absolute right-0 bottom-0 opacity-20 transform translate-x-5 translate-y-5">
                                 <i data-lucide="search" class="w-48 h-48 text-white"></i>
@@ -906,4 +906,5 @@
         });
     </script>
     </body>
+
     </html>
