--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     </h3>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-4">
                         
-                        <div class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 active:scale-95 transition-transform" onclick="window.location.href='./sipu/3d/adugames/aducar3d.html'">
+                        <div class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 active:scale-95 transition-transform" onclick="window.location.href='./sipu/adugames/aducar3d.html'">
                             <div class="w-10 h-10 bg-amber-500 rounded-xl flex items-center justify-center text-white shadow-md mb-3">
                                 <i data-lucide="anchor" class="w-5 h-5"></i>
                             </div>
@@ -908,3 +908,4 @@
     </body>
 
     </html>
+
